No semantical change. Only style adjustments: removed trailing whitespace in comments, other corrections due to different style handling in Eclipse 4.5.