@@ -93,8 +93,7 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
     /** Enum for the user session mode. */
     public enum UserSessionMode {
         /** Only a single session per user is allowed. */
-        single,
-        /** Any number of sessions for a user are allowed. */
+        single, /** Any number of sessions for a user are allowed. */
         standard
     }
 
@@ -690,9 +689,8 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
         try {
             m_eventManager = (CmsEventManager)Class.forName(clazz).newInstance();
             if (CmsLog.INIT.isInfoEnabled()) {
-                CmsLog.INIT.info(Messages.get().getBundle().key(
-                    Messages.INIT_EVENTMANAGER_CLASS_SUCCESS_1,
-                    m_eventManager));
+                CmsLog.INIT.info(
+                    Messages.get().getBundle().key(Messages.INIT_EVENTMANAGER_CLASS_SUCCESS_1, m_eventManager));
             }
         } catch (Throwable t) {
             LOG.error(Messages.get().getBundle().key(Messages.INIT_EVENTMANAGER_CLASS_INVALID_1, clazz), t);
@@ -710,11 +708,12 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
         m_configuredJobs.add(jobInfo);
 
         if (CmsLog.INIT.isInfoEnabled()) {
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_SCHEDULER_CONFIG_JOB_3,
-                jobInfo.getJobName(),
-                jobInfo.getClassName(),
-                jobInfo.getContextInfo().getUserName()));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(
+                    Messages.INIT_SCHEDULER_CONFIG_JOB_3,
+                    jobInfo.getJobName(),
+                    jobInfo.getClassName(),
+                    jobInfo.getContextInfo().getUserName()));
         }
     }
 
@@ -849,76 +848,26 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
         digester.addObjectCreate(
             "*/" + N_SYSTEM + "/" + N_SCHEDULER + "/" + N_JOB + "/" + N_CONTEXT,
             CmsContextInfo.class);
-        digester.addBeanPropertySetter("*/"
-            + N_SYSTEM
-            + "/"
-            + N_SCHEDULER
-            + "/"
-            + N_JOB
-            + "/"
-            + N_CONTEXT
-            + "/"
-            + N_USERNAME, "userName");
-        digester.addBeanPropertySetter("*/"
-            + N_SYSTEM
-            + "/"
-            + N_SCHEDULER
-            + "/"
-            + N_JOB
-            + "/"
-            + N_CONTEXT
-            + "/"
-            + N_PROJECT, "projectName");
-        digester.addBeanPropertySetter("*/"
-            + N_SYSTEM
-            + "/"
-            + N_SCHEDULER
-            + "/"
-            + N_JOB
-            + "/"
-            + N_CONTEXT
-            + "/"
-            + N_SITEROOT, "siteRoot");
-        digester.addBeanPropertySetter("*/"
-            + N_SYSTEM
-            + "/"
-            + N_SCHEDULER
-            + "/"
-            + N_JOB
-            + "/"
-            + N_CONTEXT
-            + "/"
-            + N_REQUESTEDURI, "requestedUri");
-        digester.addBeanPropertySetter("*/"
-            + N_SYSTEM
-            + "/"
-            + N_SCHEDULER
-            + "/"
-            + N_JOB
-            + "/"
-            + N_CONTEXT
-            + "/"
-            + N_LOCALE, "localeName");
-        digester.addBeanPropertySetter("*/"
-            + N_SYSTEM
-            + "/"
-            + N_SCHEDULER
-            + "/"
-            + N_JOB
-            + "/"
-            + N_CONTEXT
-            + "/"
-            + N_ENCODING);
-        digester.addBeanPropertySetter("*/"
-            + N_SYSTEM
-            + "/"
-            + N_SCHEDULER
-            + "/"
-            + N_JOB
-            + "/"
-            + N_CONTEXT
-            + "/"
-            + N_REMOTEADDR, "remoteAddr");
+        digester.addBeanPropertySetter(
+            "*/" + N_SYSTEM + "/" + N_SCHEDULER + "/" + N_JOB + "/" + N_CONTEXT + "/" + N_USERNAME,
+            "userName");
+        digester.addBeanPropertySetter(
+            "*/" + N_SYSTEM + "/" + N_SCHEDULER + "/" + N_JOB + "/" + N_CONTEXT + "/" + N_PROJECT,
+            "projectName");
+        digester.addBeanPropertySetter(
+            "*/" + N_SYSTEM + "/" + N_SCHEDULER + "/" + N_JOB + "/" + N_CONTEXT + "/" + N_SITEROOT,
+            "siteRoot");
+        digester.addBeanPropertySetter(
+            "*/" + N_SYSTEM + "/" + N_SCHEDULER + "/" + N_JOB + "/" + N_CONTEXT + "/" + N_REQUESTEDURI,
+            "requestedUri");
+        digester.addBeanPropertySetter(
+            "*/" + N_SYSTEM + "/" + N_SCHEDULER + "/" + N_JOB + "/" + N_CONTEXT + "/" + N_LOCALE,
+            "localeName");
+        digester.addBeanPropertySetter(
+            "*/" + N_SYSTEM + "/" + N_SCHEDULER + "/" + N_JOB + "/" + N_CONTEXT + "/" + N_ENCODING);
+        digester.addBeanPropertySetter(
+            "*/" + N_SYSTEM + "/" + N_SCHEDULER + "/" + N_JOB + "/" + N_CONTEXT + "/" + N_REMOTEADDR,
+            "remoteAddr");
         digester.addSetNext("*/" + N_SYSTEM + "/" + N_SCHEDULER + "/" + N_JOB + "/" + N_CONTEXT, "setContextInfo");
 
         // add generic parameter rules (used for jobs, password handler)
@@ -1190,7 +1139,10 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
             "*/" + N_SYSTEM + "/" + N_SERVLETCONTAINERSETTINGS + "/" + N_REQUESTERRORPAGEATTRIBUTE,
             "setRequestErrorPageAttribute",
             0);
-        digester.addCallMethod("*/" + N_SYSTEM + "/" + N_SERVLETCONTAINERSETTINGS, "setServletContainerSettingsMode", 1);
+        digester.addCallMethod(
+            "*/" + N_SYSTEM + "/" + N_SERVLETCONTAINERSETTINGS,
+            "setServletContainerSettingsMode",
+            1);
         digester.addCallParam("*/" + N_SYSTEM + "/" + N_SERVLETCONTAINERSETTINGS, 0, A_MODE);
 
         // add rule for ADE cache settings
@@ -1295,11 +1247,11 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
         Iterator<CmsMailHost> hosts = m_mailSettings.getMailHosts().iterator();
         while (hosts.hasNext()) {
             CmsMailHost host = hosts.next();
-            Element hostElement = mailElement.addElement(N_MAILHOST).addAttribute(A_NAME, host.getHostname()).addAttribute(
-                A_PORT,
-                Integer.toString(host.getPort())).addAttribute(A_ORDER, host.getOrder().toString()).addAttribute(
-                A_PROTOCOL,
-                host.getProtocol());
+            Element hostElement = mailElement.addElement(N_MAILHOST).addAttribute(
+                A_NAME,
+                host.getHostname()).addAttribute(A_PORT, Integer.toString(host.getPort())).addAttribute(
+                    A_ORDER,
+                    host.getOrder().toString()).addAttribute(A_PROTOCOL, host.getProtocol());
             if (host.isAuthenticating()) {
                 hostElement.addAttribute(A_USER, host.getUsername()).addAttribute(A_PASSWORD, host.getPassword());
             }
@@ -1659,9 +1611,12 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
                 cntPageCacheElem.addAttribute(A_ONLINE, "" + getAdeCacheSettings().getContainerPageOnlineSize());
                 // group-container cache
                 Element groupContainerCacheElem = cacheElem.addElement(N_GROUPCONTAINERS);
-                groupContainerCacheElem.addAttribute(A_OFFLINE, ""
-                    + getAdeCacheSettings().getGroupContainerOfflineSize());
-                groupContainerCacheElem.addAttribute(A_ONLINE, "" + getAdeCacheSettings().getGroupContainerOnlineSize());
+                groupContainerCacheElem.addAttribute(
+                    A_OFFLINE,
+                    "" + getAdeCacheSettings().getGroupContainerOfflineSize());
+                groupContainerCacheElem.addAttribute(
+                    A_ONLINE,
+                    "" + getAdeCacheSettings().getGroupContainerOnlineSize());
             }
         }
 
@@ -1752,9 +1707,10 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
             I_CmsAuthorizationHandler authorizationHandler = (I_CmsAuthorizationHandler)Class.forName(
                 m_authorizationHandler).newInstance();
             if (LOG.isInfoEnabled()) {
-                LOG.info(Messages.get().getBundle().key(
-                    Messages.INIT_AUTHORIZATION_HANDLER_CLASS_SUCCESS_1,
-                    m_authorizationHandler));
+                LOG.info(
+                    Messages.get().getBundle().key(
+                        Messages.INIT_AUTHORIZATION_HANDLER_CLASS_SUCCESS_1,
+                        m_authorizationHandler));
             }
             authorizationHandler.setParameters(m_runtimeProperties);
             return authorizationHandler;
@@ -2092,9 +2048,10 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
             I_CmsSessionStorageProvider sessionCacheProvider = (I_CmsSessionStorageProvider)Class.forName(
                 m_sessionStorageProvider).newInstance();
             if (CmsLog.INIT.isInfoEnabled()) {
-                CmsLog.INIT.info(Messages.get().getBundle().key(
-                    Messages.INIT_SESSION_STORAGEPROVIDER_SUCCESS_1,
-                    m_sessionStorageProvider));
+                CmsLog.INIT.info(
+                    Messages.get().getBundle().key(
+                        Messages.INIT_SESSION_STORAGEPROVIDER_SUCCESS_1,
+                        m_sessionStorageProvider));
             }
             return sessionCacheProvider;
         } catch (Throwable t) {
@@ -2170,11 +2127,13 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
             return new CmsDefaultValidationHandler();
         }
         try {
-            I_CmsValidationHandler validationHandler = (I_CmsValidationHandler)Class.forName(m_validationHandler).newInstance();
+            I_CmsValidationHandler validationHandler = (I_CmsValidationHandler)Class.forName(
+                m_validationHandler).newInstance();
             if (LOG.isInfoEnabled()) {
-                LOG.info(Messages.get().getBundle().key(
-                    Messages.INIT_VALIDATION_HANDLER_CLASS_SUCCESS_1,
-                    m_validationHandler));
+                LOG.info(
+                    Messages.get().getBundle().key(
+                        Messages.INIT_VALIDATION_HANDLER_CLASS_SUCCESS_1,
+                        m_validationHandler));
             }
             return validationHandler;
         } catch (Throwable t) {
@@ -2215,10 +2174,10 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
         return m_historyEnabled;
     }
 
-    /** 
+    /**
      * Returns true if detail contents are restricted to detail pages from the same site.<p>
-     * 
-     * @return true if detail contents are restricted to detail pages from the same site 
+     *
+     * @return true if detail contents are restricted to detail pages from the same site
      */
     public boolean isRestrictDetailContents() {
 
@@ -2300,27 +2259,24 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
             groupGuests);
 
         if (CmsLog.INIT.isInfoEnabled()) {
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_ADMIN_USER_1,
-                m_cmsDefaultUsers.getUserAdmin()));
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_GUEST_USER_1,
-                m_cmsDefaultUsers.getUserGuest()));
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_EXPORT_USER_1,
-                m_cmsDefaultUsers.getUserExport()));
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_DELETED_RESOURCE_USER_1,
-                m_cmsDefaultUsers.getUserDeletedResource()));
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_ADMIN_GROUP_1,
-                m_cmsDefaultUsers.getGroupAdministrators()));
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_USERS_GROUP_1,
-                m_cmsDefaultUsers.getGroupUsers()));
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_GUESTS_GROUP_1,
-                m_cmsDefaultUsers.getGroupGuests()));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(Messages.INIT_ADMIN_USER_1, m_cmsDefaultUsers.getUserAdmin()));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(Messages.INIT_GUEST_USER_1, m_cmsDefaultUsers.getUserGuest()));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(Messages.INIT_EXPORT_USER_1, m_cmsDefaultUsers.getUserExport()));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(
+                    Messages.INIT_DELETED_RESOURCE_USER_1,
+                    m_cmsDefaultUsers.getUserDeletedResource()));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(
+                    Messages.INIT_ADMIN_GROUP_1,
+                    m_cmsDefaultUsers.getGroupAdministrators()));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(Messages.INIT_USERS_GROUP_1, m_cmsDefaultUsers.getGroupUsers()));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(Messages.INIT_GUESTS_GROUP_1, m_cmsDefaultUsers.getGroupGuests()));
             CmsLog.INIT.info(Messages.get().getBundle().key(Messages.INIT_DEFAULT_USER_NAMES_INITIALIZED_0));
         }
     }
@@ -2384,11 +2340,12 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
         m_historyVersions = Integer.valueOf(historyVersions).intValue();
         m_historyVersionsAfterDeletion = Integer.valueOf(historyVersionsAfterDeletion).intValue();
         if (CmsLog.INIT.isInfoEnabled()) {
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_HISTORY_SETTINGS_3,
-                Boolean.valueOf(m_historyEnabled),
-                new Integer(m_historyVersions),
-                new Integer(m_historyVersionsAfterDeletion)));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(
+                    Messages.INIT_HISTORY_SETTINGS_3,
+                    Boolean.valueOf(m_historyEnabled),
+                    new Integer(m_historyVersions),
+                    new Integer(m_historyVersionsAfterDeletion)));
         }
     }
 
@@ -2439,11 +2396,12 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
         boolean enableSecurity = Boolean.valueOf(enableSecurityStr).booleanValue();
         m_loginManager = new CmsLoginManager(disableMinutes, maxBadAttempts, enableSecurity);
         if (CmsLog.INIT.isInfoEnabled()) {
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_LOGINMANAGER_3,
-                new Integer(disableMinutes),
-                new Integer(maxBadAttempts),
-                new Boolean(enableSecurity)));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(
+                    Messages.INIT_LOGINMANAGER_3,
+                    new Integer(disableMinutes),
+                    new Integer(maxBadAttempts),
+                    new Boolean(enableSecurity)));
         }
     }
 
@@ -2456,11 +2414,12 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
         m_loginMessage = message;
         if (CmsLog.INIT.isInfoEnabled()) {
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_LOGINMESSAGE_3,
-                Boolean.valueOf(message.isEnabled()),
-                Boolean.valueOf(message.isLoginForbidden()),
-                message.getMessage()));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(
+                    Messages.INIT_LOGINMESSAGE_3,
+                    Boolean.valueOf(message.isEnabled()),
+                    Boolean.valueOf(message.isLoginForbidden()),
+                    message.getMessage()));
         }
     }
 
@@ -2486,7 +2445,8 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
         m_notificationProject = notificationProject;
         if (CmsLog.INIT.isInfoEnabled()) {
-            CmsLog.INIT.info(Messages.get().getBundle().key(Messages.INIT_NOTIFICATION_PROJECT_1, m_notificationProject));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(Messages.INIT_NOTIFICATION_PROJECT_1, m_notificationProject));
         }
     }
 
@@ -2516,9 +2476,10 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
         m_passwordHandler = passwordHandler;
         if (CmsLog.INIT.isInfoEnabled()) {
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_PWD_HANDLER_SUCCESS_1,
-                passwordHandler.getClass().getName()));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(
+                    Messages.INIT_PWD_HANDLER_SUCCESS_1,
+                    passwordHandler.getClass().getName()));
         }
     }
 
@@ -2586,8 +2547,8 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
 
     /**
      * Sets the 'restrict detail contents' option.<p>
-     * 
-     * @param restrictDetailContents the value of the option 
+     *
+     * @param restrictDetailContents the value of the option
      */
     public void setRestrictDetailContents(String restrictDetailContents) {
 
@@ -2613,13 +2574,13 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
         if (objectInstance instanceof I_CmsDbContextFactory) {
             m_runtimeInfoFactory = (I_CmsDbContextFactory)objectInstance;
             if (CmsLog.INIT.isInfoEnabled()) {
-                CmsLog.INIT.info(Messages.get().getBundle().key(Messages.INIT_RUNTIME_INFO_FACTORY_SUCCESS_1, className));
+                CmsLog.INIT.info(
+                    Messages.get().getBundle().key(Messages.INIT_RUNTIME_INFO_FACTORY_SUCCESS_1, className));
             }
         } else {
             if (CmsLog.INIT.isFatalEnabled()) {
-                CmsLog.INIT.fatal(Messages.get().getBundle().key(
-                    Messages.INIT_RUNTIME_INFO_FACTORY_FAILURE_1,
-                    className));
+                CmsLog.INIT.fatal(
+                    Messages.get().getBundle().key(Messages.INIT_RUNTIME_INFO_FACTORY_FAILURE_1, className));
             }
         }
 
@@ -2681,9 +2642,8 @@ public class CmsSystemConfiguration extends A_CmsXmlConfiguration {
             m_tempFileProjectId = -1;
         }
         if (CmsLog.INIT.isInfoEnabled()) {
-            CmsLog.INIT.info(Messages.get().getBundle().key(
-                Messages.INIT_TEMPFILE_PROJECT_ID_1,
-                new Integer(m_tempFileProjectId)));
+            CmsLog.INIT.info(
+                Messages.get().getBundle().key(Messages.INIT_TEMPFILE_PROJECT_ID_1, new Integer(m_tempFileProjectId)));
         }
     }
 
